# spankbang-dl

./: .gitignore  Makefile  README.md  UI_Downloader.py  main.py  old.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.zh.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
spankbang_dl/: __init__.py  __main__.py  cli.py  consts.py  downloader.py  gui.py  logs.py  scraper.py  translations.py  utils.py
spankbang_dl/gui/: __init__.py  commands.py  main.py
spankbang_dl/strings/: strings_en.json  strings_es.json  strings_zh.json
strings/: strings_en.json  strings_es.json
