[tool.poetry]
name = "spankbang-dl"
version = "0.1.1"
description = "A download tool for Spankbang"
license = "GPL-3.0-only"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/spankbang-dl"
include = [{ path = "spankbang_dl/strings", format = ["sdist", "wheel"] }]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.13.4"
cloudscraper = "^1.2.71"
core-helpers = "^1.3.0"
inquirer = "^3.1.3"
requests = "^2.31.0"
rich = ">=13.5.3"

[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20240907"

[tool.poetry.scripts]
spankbang-dl = "spankbang_dl.__main__:main"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
